--- a/index.html
+++ b/index.html
@@ -1,3 +1,125 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="./css/reset.css">
-<link rel="stylesheet" href="./css/base.css">
+<html lang="en">
+	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Crimson+Text:400,400italic|Pontano+Sans">
+	<link rel="stylesheet" type="text/css" href="./css/reset.css">
+	<link rel="stylesheet" type="text/css" href="./css/base.css">
+	<title>Michael Landis Awakening</title>
+	<header>
+		<a href="#" title="return home"><img src="./images/logo.png" alt="logo"></a>
+		<hgroup>
+			<h2>Michael Landis</h2>
+			<h1>Awakening</h1>
+			<span class="toggle">
+				<svg viewBox="0 0 32 32">
+					<path d="M2 6h28v6h-28zM2 14h28v6h-28zM2 22h28v6h-28z"></path>
+				</svg>
+			</span>
+		</hgroup>
+	</header>
+	<script type="text/javascript" src="./scripts/toggle.js"></script>
+	<main>
+		<h1>Loving Lightly</h1>
+		<p>What does love look like when it isn’t codependent? If we aren’t swearing undying love to our companions, how do we know that it’s love?</p>
+		<h2>Love as a state of being</h2>
+		<p>When we aren’t living codependently, we’re living from a space of independence. Not in a “I don’t need anyone, dammit!” way, but from a space of “I have everything I need.”</p>
+		<p>Our capacity to create, love, express and enjoy is without question. We are comfortable in our living, we find joy in the little things in life. We recognize our inherent value and worth, as beautiful, unique, glorious expressions of the universe.</p>
+		<p>The key to loving without codependency is that fundamental sense of love flowing through us. When we feel love as a state, not a reaction to our relationships, much less bothers us, because our sense of well-being doesn’t depend on what is outside of us.</p>
+		<h2>Self-worth versus self-love</h2>
+		<p>One of my favorite astrologers, Adam Elenbaas, says in his <a href="https://youtu.be/ijGub2h8qqE?t=2337" target="_blank" rel="noopener">vlog about the lunar eclipse in July 2019</a> that we can find ourselves in situations where we feel like we’re giving too much in relationship, and we pull back. We reassess, and frequently proclaim, “We need to stop giving away too easily. We need to love ourselves more!”</p>
+		<p>Adam points out that we frequently confuse self-love with self-worth. When we speak in terms of doing too much, and choosing to do less unless our worth is recognized, we’re increasing our price, but it’s still the same dynamic. We’re not talking about love, we’re talking about worth, value.</p>
+		<p>When we require reciprocity for our actions, we are looking for validation of our worth from others. “Yes, what you do <em>is</em> worth what you ask for. It <em>does</em> matter!”</p>
+		<p>It boils down to needing to hear, “You matter.”</p>
+		<p>How do we change this equation? By recognizing that your worth has no measure. As Adam also says, you are an amazing being who graces this universe with your presence, and that’s just the start!</p>
+		<p>When your self-worth has no basis in others’ approval or disapproval, you no longer choose your actions based upon whether <em>their approval or disapproval</em> fills or depletes you. You choose your actions based upon whether <em>your actions</em> fill or deplete you.</p>
+		<p>The middleman is cut out.</p>
+		<h2>The value of the word “no,” part 2</h2>
+		<p>In <a href="http://www.michael-landis-awakening.com/the-power-of-no/" target="_blank" rel="noopener">one of my first articles</a> I speak of the word “no” being a word of love, because it relieves resentment and allows the receiver to recalibrate more quickly. Typically, however, we have a hard time saying “no” because the other person will disapprove of us. When we finally have to say “no,” the resentment that has built up comes with the word, and the answer is given with pent up pain and anger.</p>
+		<p>When self-worth is felt regardless of others, when love is felt as a state of being instead of something dependent upon others, the word “no” becomes effortless to say. If we say “no,” our self-worth isn’t diminished. Another’s disapproval doesn’t keep us quiet. Love remains in our lives. We can say it the moment we feel that twinge in our solar plexus that tells us this will deplete us.</p>
+		<p>Because we can say “no” before resentment builds, we can say it with love. If the other person is unhappy with our response, we can still love them. We can be present with them as they process our refusal. We can walk through the process alongside them, unafraid of sharing their grief.</p>
+		<p>When we are unafraid of saying “no,” we also become unafraid of saying “yes.” Most of the time, when we hesitate on saying “yes,” it’s for one of two reasons. Either we feel like we need to say “yes” when we want to say “no,” or we’re afraid of committing.</p>
+		<p>Being comfortable with the word “no” means we won’t say “yes” if we don’t mean it. We also know we can say “no” at any time, whenever it no longer feels like a “yes.” And before we choose to say “no,” we can raise concerns more quickly, giving us the information we may need to say “yes” in the first place.</p>
+		<p>Because our self worth isn’t dependent on another’s participation in our life, it’s also easier for us to <em>hear</em> “no.” This lets us ask questions more easily. It makes it easier for others to say “no” in return. Because our energy isn’t pent up in fearing the answer, we can more easily tell when someone is afraid to say “no,” and give them encouragement to be honest with us. We can be grateful for their honesty and supportive of their autonomy, which improves communication and depth in the relationship.</p>
+		<h2>Spotting versus lifting</h2>
+		<p>When we needed others to validate us, we may have put ourselves into situations where we helped too much. Feeling comfortable saying “no” keeps us from exerting more energy than is healthy for us. We might help out less than we used to, and indeed less than our friends are used to.</p>
+		<p>If we were people who used to overexert to help people, if we developed savior complexes, we might feel that we are letting down those who depended on us. But actually we are shifting our role, from a <em>lifter</em> to a <em>spotter.</em></p>
+		<p>In the gym, the weightlifter is the one doing the exercises. The spotter helps them in the last repetitions of their set. In those last reps, the spotter is barely assisting the lifter, just putting a couple of fingers under the bar to relieve as little weight as possible for the lifter to be successful. Only if the lifter collapses does the spotter retrieve the bar.</p>
+		<p>The key is that <em>the spotter does not take over the work from the lifter.</em> The lifter’s arms may be shaking, sweat pouring from their brow, but as long as their arms are barely inching up, the spotter is doing just enough to allow the lifter to keep pushing up. But it’s the lifter who pushes, not the spotter. This is where muscle is built, at the edges of our capacity.</p>
+		<p>In <a href="http://www.michael-landis-awakening.com/the-gym-of-life/" target="_blank" rel="noopener">this gym of life</a>, we all come in to strengthen our metaphysical muscles. If someone comes in and interrupts our exercise routine by taking the weights away before we’re actually building muscle, they’re not doing us any favors. The weights will still be there, waiting for us to try again.</p>
+		<p>By being able to say “no,” the spotter lets the lifter know that they need to do their own lifting. The spotter can provide alternatives, perhaps freeing the lifter to find people who can hold more weight easily, or even to choose lighter exercises. But they won’t do the lifter’s work any more.</p>
+		<h2>From drive to curiosity</h2>
+		<p>When we feel our self-worth coming from within, when we feel love as a state of being, we are no longer driven to make relationships meaningful in the same way. Instead of “you are my everything” (“you validate me”) it becomes “you are wonderful.”</p>
+		<p>Instead of living in a desert looking for an oasis, we carry our own inexhaustible supply of love. We explore. When we meet others, we are curious about them, not driven to find what they can give us. We might see opportunities for sharing resources, ideas, sensuality, but from a place of building more, not a place of using them. Instead of looking at others as suppliers of needs, we see them as bestowers of gifts and opportunities to offer our own.</p>
+		<h2>Loving lightly</h2>
+		<p>So what does this all boil down to? When we know that we are beings of inestimable value just for being here? When we feel love pouring through us like the air we breathe?</p>
+		<p>Because we are filled with love, we radiate it, sharing it with anyone who passes by us. Because we don’t need external validation, we gently enforce our boundaries on a continuous basis.</p>
+		<p>Because our “yes”es and “no”s are unforced, we only do things because we enjoy them. This doesn’t mean we don’t do hard work, but that we enjoy the hard work that we feel drawn to do. We are excited by the prospect of a job well done, a friend supported, a common goal achieved. And when it is done, we decide what is next, whether it involves the same people or not.</p>
+		<p>Because we can appreciate others’ “yes”es and “no”s, we recognize that they are saying “yes” because they honestly want to do it. (Or we can recognize when they are forcing it, and gently support their honesty.) And because we do not need their “yes,” but receive it anyways, we appreciate it that much more.</p>
+		<p>Every action becomes a gift.</p>
+		<p>Because we can say “no” instantly, we will not stay in codependent relationships. Our relationships may look more tenuous. They are illustrated by gifting as we feel in any given moment, with less effort put into obligations and promises that mark a traditional relationship.</p>
+		<p>At the same time, because saying “no” is easy, we put less weight on a “no.” Saying “no” to a specific request or aspect of relationship doesn’t invalidate other aspects of that relationship. The strong but rigidly brittle bonds of codependent relationships are replaced by flexible strands of appreciation.</p>
+		<p>But relationships that stay together will do so because the people in the relationship enjoy sharing with each other, not because they help each other maintain their identity. When each moment together is a gift, it’s complete in itself. If someone decides they want to head out somewhere, the departure is met with gratitude for the time spent together. And because the resentment felt in codependent breaks is missing, if the person returns, there is a much gentler sense of appreciation for their returned presence.</p>
+		<p>When codependent relationships form, they look like two bubbles coming together on a pool of water. They snick together and share a central wall, floating together. Trying to separate them destroys both bubbles.</p>
+		<p>When relationships form between two people full of self-love and self-worth, they look like two flowers floating together in a pond. Petals might intertwine, they might float together, but they can separate more easily and they remain two independent flowers.</p>
+		<p>This doesn’t mean that relationships between independent people are discarded or necessarily more temporary than codependent relationships. <a href="http://www.michael-landis-awakening.com/what-love-looks-like/" target="_blank" rel="noopener">My friend Darcy’s experience</a> illustrates meeting a long-lasting relationship between independent people.</p>
+		<p>I call this “loving lightly.”</p>
+		<nav class="next-previous">
+			<div>&laquo; <a href="https://www.michael-landis-awakening.com/________-at-first-sight/" rel="next">Next article</a></div>
+			<div><a href="https://www.michael-landis-awakening.com/________-at-first-sight/" rel="prev">Previous article</a> &raquo;</div>
+		</div>
+	</main>
+	<nav class="articles">
+		<h1>Essays</h1>
+		<ul>
+			<li><a href=".">Article 1</a>
+			<li><a href=".">Article 2</a>
+			<li><a href=".">Article 3</a>
+			<li><a href=".">Article 4</a>
+			<li><a href=".">Article 5</a>
+			<li><a href=".">Article 6</a>
+			<li><a href=".">Article 7</a>
+			<li><a href=".">Article 8</a>
+			<li><a href=".">Article 9</a>
+			<li><a href=".">Article 10</a>
+			<li><a href=".">Article 11</a>
+			<li><a href=".">Article 12</a>
+			<li><a href=".">Article 13</a>
+			<li><a href=".">Article 14</a>
+			<li><a href=".">Article 15</a>
+			<li><a href=".">Article 16</a>
+			<li><a href=".">Article 17</a>
+			<li><a href=".">Article 18</a>
+			<li><a href=".">Article 19</a>
+			<li><a href=".">Article 20</a>
+			<li><a href=".">Article 21</a>
+			<li><a href=".">Article 22</a>
+			<li><a href=".">Article 23</a>
+			<li><a href=".">Article 24</a>
+			<li><a href=".">Article 25</a>
+			<li><a href=".">Article 26</a>
+			<li><a href=".">Article 27</a>
+			<li><a href=".">Article 28</a>
+			<li><a href=".">Article 29</a>
+			<li><a href=".">Article 30</a>
+			<li><a href=".">Article 31</a>
+			<li><a href=".">Article 32</a>
+			<li><a href=".">Article 33</a>
+			<li><a href=".">Article 34</a>
+			<li><a href=".">Article 35</a>
+			<li><a href=".">Article 36</a>
+			<li><a href=".">Article 37</a>
+			<li><a href=".">Article 38</a>
+			<li><a href=".">Article 39</a>
+			<li><a href=".">Article 40</a>
+			<li><a href=".">Article 41</a>
+		</ul>
+		<h1>Topics</h1>
+		<div>
+			<a href="#">tag1</a>
+			<a href="#">tag2</a>
+			<a href="#">tag3</a>
+		</div>
+	</nav>
+	<footer>
+		<p>Copyright &copy; 2019 Michael Landis. All rights reserved.
+	</footer>
+</html>
